# grasp_pipeline

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: grasp_pipeline_client.launch  grasp_pipeline_servers.launch  test_blensor.launch  urlg_gazebo_moveit.launch
script/: convert_mesh_formats.py  plot_traj.py  robot_traj_interface.py
script/test/: test_preshape.py  test_visual_data_save_server.py
src/: active_learning_client.py  active_planning_client.py  arm_moveit_planner_server.py  broadcast_gazebo_kinect_tf.py  compute_finger_tip_location.py  control_allegro_to_config_server.py  create_moveit_scene.py  gen_grasp_preshape_server.py  gen_object_urdf.py  grasp_client.py  manage_moveit_scene_server.py  record_grasp_data_server.py  save_visual_data_server.cpp  task_velocity_control_server.py  test_visual_data_save_server.py  voxel_planning_client.py
src/grasp_client/: active_learning_client.py  active_planning_real_client.py  active_planning_sim_client.py  grasp_real_client.py  grasp_sim_client.py  voxel_plan_real_client.py  voxel_plan_sim_client.py
src/hand_model/: handModel.py
src/real/: bag_tactile_data_server.py  bag_visual_data_server.py  control_real_allegro_server.py  (+1 more)
srv/: AllegroConfig.srv  GraspDataBagging.srv  GraspDataRecording.srv  GraspPreshape.srv  LaunchBlensor.srv  LaunchMoveit.srv  LaunchUrlgGazebo.srv  LaunchUrlgGazeboMoveit.srv  ManageMoveitScene.srv  MoveObjectGazebo.srv  PalmGoalPoseWorld.srv  RealGraspData.srv  SaveVisualData.srv  SimGraspData.srv  StraightLinePlan.srv  UpdateInfPreshape.srv  UpdateObjectGazebo.srv
(+4 files in other folders)
